name:                Classical-DPLL-SAT-solver
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              0a-
maintainer:          a@0a.io
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable _
  main-is:             Main.hs
  other-modules:  Tokens, Grammar
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, array
  hs-source-dirs:      src
  Build-Tools:    alex, happy
  ghc-options: -fno-warn-tabs
  default-language:    Haskell2010